cmake_minimum_required(VERSION 3.29)
project(PROJET-INFO C)

set(CMAKE_C_STANDARD 23)

add_executable(PROJET-INFO
        "annuler son tour.c"
        "blocage d'un pion.c"
        "déplacement du pion.c"
        "déplacement du pion.c"
        "passer au dessus du pion.c"
        "passer son tour.c"
        "positionnement d'une barrière.c"
        "annuler son tour.c"
        options.c
        annuler son tour.c
        annuler son tour.h
        blocage d'un pion.c
        blocage d'un pion.h
        déplacement du pion.c
        déplacement du pion.h
        passer au dessus du pion.c
        passer au dessus du pion.h
        passer son tour.c
        passer son tour.h
        positionnement d'une barrière.c
        positionnement d'une barrière.h
        annuler son tour.c
        annuler son tour.h)