cmake_minimum_required(VERSION 3.29)
project(PROJET-INFO C)

set(CMAKE_C_STANDARD 23)

add_executable(PROJET-INFO
        "accueil.c"
        "accueil.h"
        "aide.c"
        "aide.h"
        "login.c"
        "login.h"
        "menu.c"
        "menu.h"
        "nouvelle partie.c"
        "nouvelle partie.h"
        "reprendre une partie.c"
        "reprendre une partie.h"
        "signin.c"
        "signin.h"
        "visuel du menu.c"
        "visuel de menu.h"
        accueil.c
        accueil.h
        aide.c
        aide.h
        login.c
        login.h
        menu.c
        menu.h
        nouvelle partie.c
        nouvelle partie.h
        reprendre une partie.c
        reprendre une partie.h
        signin.c
        signin.h
        visuel du menu.c
        visuel du menu.h
        accueil.c
        aide.c
        login.c
        menu.c
        "nouvelle partie.c"
        "reprendre une partie.c"
        signin.c
        "visuel du menu.c")